--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-profile-materialui",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://tittoh.github.io/react-profile-materialui/",
+  "homepage": "https://tittoh.github.io/react-profile-materialui",
   "dependencies": {
     "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
@@ -22,6 +22,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
